<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FillFormActivity">

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:autofillHints="text"
        android:hint="@string/hint_edittext_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/hint_edittext_surname"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_name"
        app:layout_constraintStart_toStartOf="@+id/edittext_name"
        app:layout_constraintTop_toBottomOf="@+id/edittext_name" />

    <EditText
        android:id="@+id/edittext_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:hint="@string/hint_edittext_age"
        android:inputType="number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/edittext_surname"
        app:layout_constraintStart_toStartOf="@+id/edittext_surname"
        app:layout_constraintTop_toBottomOf="@+id/edittext_surname" />

    <Button
        android:id="@+id/button_apply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_apply"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edittext_age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edittext_age"
        app:layout_constraintTop_toBottomOf="@+id/edittext_age"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/title_view_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>